# relationship-cultivating_robotic_pet

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/face_rec/share/face_rec/: package.bash  package.zsh
log/: latest_build
src/face_rec/: package.xml  setup.cfg  setup.py
src/face_rec/FacialRecognition/: 03_face_recognition.py  face_dataset_node.py
