<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>face_rec</name>
  <version>0.0.0</version>
  <description>ROS2 package for face recognition using OpenCV and sensor data.</description>
  <maintainer email="231180167@smail.nju.edu.cn">wxy</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <exec_depend>ros2launch</exec_depend>
  <depend>python3-opencv</depend>

	<export>
		<buildtool_depend>ament_python</buildtool_depend>
  </export>
</package>

